
HIGH PRIORITY:

MEDIUM PRIORITY:
- make zoom buttons more fun looking, maybe using GradientButtonNode?

LOW PRIORITY:
- delete MoleculeCountAlternateNode, associated developer controls, image files (*-big.png)
- hand cursors don't work on PSwing check boxes and radio buttons [Unfuddle #653]
- selection in PTextFieldNode doesn't behave properly [Unfuddle #660]


DONE:
7/14/08 - change model for combining liquids, I was given an incorrect model
7/14/08 - decouple MoleculeCountAlternateNode from the rest of the code base so that it's easy to delete
7/14/08 - workaround: clicking twice in PHTextFieldNode causes liquid to change to Custom [Unfuddle #660]
******* version 0.00.17 (23184)
7/14/08 - changing a bar sets liquid to Custom
7/14/08 - modify Custom liquid pH when Liquid.setPH is called
7/14/08 - setPickable(false) on non-interactive nodes
7/14/08 - use common font size for all controls
7/14/08 - add a line to bottom of graph, on top of bars, makes it look cleaner
7/14/08 - move some things that should be easier to find into PHScaleConstants
7/14/08 - generalize layout code in BeakerControlNode constructor
7/14/08 - fix bar drag handlers so that we can get to min values in linear scale
7/14/08 - generalize alignment of pH slider ticks and bar graph ticks
7/14/08 - reorder some constructor args for symmetry with other interfaces
7/14/08 - constrain pH range in draggable bars via the model
7/14/08 - move pH range into model, make Liquid.setPH clamp to range
7/13/08 - organize imports
7/13/08 - add drag handlers for bars, update model as bars are dragged
7/13/08 - major reorganization and rename of packages, done in phases to workaround Subversive issues
7/13/08 - move zoom controls to their own class
7/13/08 - clean up BarGraphNode, remove some duplicate and unnecessary code
7/13/08 - refactor graph bars into their own class, BarNode
7/13/08 - javadoc BarGraphNode and BarDragHandleNode
7/13/08 - implement model-view transform for log scale bar graph